Fri Dec 03 21:14:48 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/ctlib/ct.c src/tds/mem.c src/tds/query.c:
	* src/tds/tds_checks.c:
	- cleanup
	- renamed TDSSOCKET->cursor in TDSSOCKET->cursors
	- avoid pointer to garbage

Fri Dec 03 17:46:20 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* NEWS: update
	* include/tds.h src/ctlib/ct.c src/tds/mem.c src/tds/query.c:
	* src/tds/tds_checks.c src/tds/token.c:
	- update docs
	- make dynamics a linked list
	- use a pointer to current cursor instead of client_id in TDSSOCKET
	* src/tds/login.c: update docs

Thu Dec 02 14:20:45 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/ctlib/ct.c src/dblib/dblib.c src/tds/iconv.c:
	* src/tds/mem.c src/tds/tds_checks.c src/tds/token.c:
	* src/tds/write.c src/tds/unittests/t0003.c:
	* src/tds/unittests/t0004.c:
	- make TDSSOCKET->env just a field so to avoid the extra allocation

Thu Dec 02 13:36:00 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/ct.c src/tds/unittests/dynamic1.c:
	- fix for tests
	* src/tds/data.c: set on_server.column_size correctly
	* include/tds.h src/tds/mem.c:
	- cleanup
	- unset current_results if needed
	* src/tds/tds_checks.c src/tds/tds_checks.h:
	- improved tests

Thu Dec 02 12:28:46 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* include/tdsodbc.h include/tdsstring.h src/odbc/connectparams.h:
	* src/odbc/convert_sql2string.h src/odbc/convert_tds2sql.h:
	* src/odbc/odbc_checks.h src/odbc/odbc_util.h:
	* src/odbc/prepare_query.h src/odbc/sql2tds.h:
	- change $Id to comment inside code

Thu Dec  2 01:19:30 EST 2004	JK Lowden <jklowden@schemamania.org>
	* vms/descrip_mms.template s/msdblib_define/dblib_define/

Wed Dec  1 17:34:40 EST 2004	JK Lowden <jklowden@schemamania.org>
	* src/apps/bsqldb.c begin to support other column separators

Wed Dec 01 14:10:10 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/odbc/odbc.c src/odbc/unittests/rebindpar.c: